@@ -1,3 +1,9 @@
+2007-02-27  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimptool.[ch]: clean up last commit a bit. Pass the
+	recorded button_press_coords to GimpTool::button_release() when a
+	click was detected.
+
 2007-02-27  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpcoreconfig.c: increased default value for
